--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "fail.js",
   "description": "Quick error handling function for node js",
   "version": "0.1.0",
+  "main": "fail.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/MNBuyskih/fail.js.git"
